--- a/home.html
+++ b/home.html
@@ -14,7 +14,7 @@
         <br>
         <h3 style="text-align: center;"><a href="https://www.youtube.com/channel/UCK0U_ca0x7LgiRdF67XdpxQ" style="text-align: center;">zygoteweb</a>
             <a href="https://linktr.ee/acidica" style="text-align: center;">linktree</a>
-            <a href="journal.html" style="text-align: center;">journal</a></h3>
+            <a href="journal.html" style="text-align: center;">blog</a></h3>
         <h1 style="color: red; text-align: center;">WELCOME TO <br> ZYGOTE DOT NET</h1>
         <p style="text-align:center; filter: invert(100%);"><img src="images/giphy.gif"></p>
         <p style="color: yellow; text-align: center;">the part of reality <br> where past and future <br> become present</p>
