--- a/journal.html
+++ b/journal.html
@@ -6,7 +6,7 @@
         <title>Journal</title>
     </head>
     <body style="background-color: black">
-        <h1 style="color: yellow;">journal</h1>
+        <h1 style="color: yellow;">blog</h1>
         <p style="color: white;">febuary 1 2023: <a href="journals/first ever entry.html">first ever entry</a></p>
     </p>
 </html>
