--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>18+</title>
+        <title>Zygote Home</title>
     </head>
     <body style="background-color: black">
         <br>
@@ -12,17 +12,16 @@
         <br>
         <br>
         <br>
+        <h3 style="text-align: center;"><a href="https://www.youtube.com/channel/UCK0U_ca0x7LgiRdF67XdpxQ" style="text-align: center;">zygoteweb</a>
+            <a href="https://linktr.ee/acidica" style="text-align: center;">linktree</a>
+            <a href="journal.html" style="text-align: center;">blog</a></h3>
+        <h1 style="color: red; text-align: center;">WELCOME TO <br> ZYGOTE DOT NET</h1>
+        <p style="text-align:center; filter: invert(100%);"><img src="images/giphy.gif"></p>
+        <p style="color: yellow; text-align: center;">the part of reality <br> where past and future <br> become present</p>
         <br>
         <br>
         <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <h1 style="color: red; text-align: center;">18+ Warning</h1>
-        <br>
-        <p style="color: yellow; text-align: center;">no this is not a porn site, but this website contains content <br> not suitible for audiences under the age of 18, this includes nudity, <br> graphic imagery, and just stupid shit. audiences under 18 leave, <br> otherwise enjoy yourself.</p>
-        <br>
-        <h1 style="text-align: center; color: red;"><a href="home.html" style="text-align: center;">ENTER</a></h3>
-
+        <!-- hitwebcounter Code START -->
+        <a href="https://www.hitwebcounter.com" target="_blank">
+        <p style="text-align:center;"><img src="https://hitwebcounter.com/counter/counter.php?page=8189262&style=0014&nbdigits=5&type=ip&initCount=0" title="Free Counter" Alt="web counter"   border="0" /></a></p>                                   
 </html>
