--- a/home.html
+++ b/home.html
@@ -18,4 +18,10 @@
         <h1 style="color: red; text-align: center;">WELCOME TO <br> ZYGOTE DOT NET</h1>
         <p style="text-align:center; filter: invert(100%);"><img src="images/giphy.gif"></p>
         <p style="color: yellow; text-align: center;">the part of reality <br> where past and future <br> become present</p>
+        <br>
+        <br>
+        <br>
+        <!-- hitwebcounter Code START -->
+        <a href="https://www.hitwebcounter.com" target="_blank">
+        <p style="text-align:center;"><img src="https://hitwebcounter.com/counter/counter.php?page=8189262&style=0014&nbdigits=5&type=ip&initCount=0" title="Free Counter" Alt="web counter"   border="0" /></a></p>                                   
 </html>
