--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>18+</title>
     </head>
-    <body style="background-color: black">
+    <body style="background-color: black; text-align: center;">
         <br>
         <br>
         <br>
@@ -19,10 +19,10 @@
         <br>
         <br>
         <br>
-        <h1 style="color: red; text-align: center;">18+ Warning</h1>
+        <h1 style="color: red;">18+ Warning</h1>
         <br>
-        <p style="color: yellow; text-align: center;">no this is not a porn site, but this website contains content <br> not suitible for audiences under the age of 18, this includes nudity, <br> graphic imagery, and just stupid shit. audiences under 18 leave, <br> otherwise enjoy yourself.</p>
+        <p style="color: yellow;">no this is not a porn site, but this website contains content <br> not suitible for audiences under the age of 18, this includes nudity, <br> graphic imagery, and just stupid shit. audiences under 18 leave, <br> otherwise enjoy yourself.</p>
         <br>
-        <h1 style="text-align: center; color: red;"><a href="home.html" style="text-align: center;">ENTER</a></h3>
+        <h1 style="text-align:"><a href="home.html" style="text-align: center;">ENTER</a></h3>
 
 </html>
