--- a/home.html
+++ b/home.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Zygote Home</title>
     </head>
-    <body style="background-color: black">
+    <body style="background-color: black; text-align: center;">
         <br>
         <br>
         <br>
