--- a/journal.html
+++ b/journal.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Journal</title>
     </head>
-    <body style="background-color: black">
+    <body style="background-color: black; text-align: center;">
         <h1 style="color: yellow;">blog</h1>
         <p style="color: white;">febuary 1 2023: <a href="journals/first ever entry.html">first ever entry</a></p>
     </p>
