--- a/journals/first ever entry.html
+++ b/journals/first ever entry.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>first ever entry</title>
     </head>
-    <body style="background-color: black">
+    <body style="background-color: black; text-align: center;">
         <p style="color: white;">today i made zygotedotnet</p>
     </p>
 </html>
