--- a/index.html
+++ b/index.html
@@ -23,6 +23,6 @@
         <br>
         <p style="color: yellow;">no this is not a porn site, but this website contains content <br> not suitible for audiences under the age of 18, this includes nudity, <br> graphic imagery, and just stupid shit. audiences under 18 leave, <br> otherwise enjoy yourself.</p>
         <br>
-        <h1 style="text-align:"><a href="home.html" style="text-align: center;">ENTER</a></h3>
+        <u><h1 style="text-align: center"><a href="home.html" style="text-decoration: none; color: red;">ENTER</a></h3></u>
 
 </html>
