--- a/journal.html
+++ b/journal.html
@@ -9,7 +9,8 @@
         <h1 style="color: yellow;">blog</h1>
         <hr>
         <h4 style="color: white;">all entries:</h4>
-        <p style="color: white;">febuary 1 2023: <a href="journals/entry 2 cuz y not.html">entry 2 cuz y not</a></p>
-        <p style="color: white;">febuary 1 2023: <a href="journals/first ever entry.html">first ever entry</a></p>
+        <p style="color: white;">febuary 1 2023: <a href="journals/entry 2 cuz y not.html" style="text-decoration: none; color: red;">entry 2 cuz y not</a></p>
+        <p style="color: white;">febuary 1 2023: <a href="journals/first ever entry.html" style="text-decoration: none; color: red;">first ever entry</a></p>
+    
     </p>
 </html>
