--- a/home.html
+++ b/home.html
@@ -1,26 +1,70 @@
 <!DOCTYPE html>
 <html>
-    <head>
+    <head> 
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Zygote Home</title>
+        <style>
+            .poler {
+                width: 128px;
+                height: 128px;
+            }
+            .news {
+                border-style: solid;
+                border-width: 2px;
+                border-color: red;
+                background-color: red;
+                padding: 5px;
+            }
+            .links {
+                border-style: solid;
+                border-width: 1px;
+                border-color: yellow;
+                width: 360px;
+                height: 23px;
+                padding: 5px;
+            }
+            .boarder {
+                border-style: solid;
+                background-color: red;
+                width: 600px;
+                height: 1px;
+            }
+        </style>
     </head>
     <body style="background-color: black; text-align: center;">
+        <p class="news" style="color: white;"> <b>CURRENT NEWS:</b> acidica creates a new website? all we can pray is that visual updates come sooner than </p> 
+        <br>
+        <br>
+        <br>
+        <hr class="boarder">
+        <h1 style="color: red; text-align: center; font-size: 50px;">WELCOME TO <br> ZYGOTE DOT NET</h1>
+        <center>
+            <u><h3 class="links" style="text-align: center; ">
+                <a href="https://www.youtube.com/channel/UCK0U_ca0x7LgiRdF67XdpxQ" style="text-decoration: none; color: yellow;">zygoteweb</a>
+                br <a href="https://linktr.ee/acidica" style="text-decoration: none; color: yellow;">linktree</a>
+                br <a href="journal.html" style="text-decoration: none; color: yellow;">blog</a>
+                br <a href="" style="text-decoration: none; color: yellow;">about</a>
+            </h3></u> 
+        </center>    
+        <p style="text-align:center; filter: invert(100);"><img src="images/homepage.gif"></p>
+        <p style="color: yellow; text-align: center;">the part of reality <br> where past and future <br> become present.</p> 
+        <br>
+        <br>
+        <hr class="boarder">
         <br>
         <br>
         <br>
         <br>
         <br>
         <br>
-        <u><h3 style="text-align: center;">
-            <a href="https://www.youtube.com/channel/UCK0U_ca0x7LgiRdF67XdpxQ" style="text-decoration: none; color: yellow;">zygoteweb /</a>
-            <a href="https://linktr.ee/acidica" style="text-decoration: none; color: yellow;">linktree /</a>
-            <a href="journal.html" style="text-decoration: none; color: yellow;">blog /</a>
-        </h3></u> 
-        <h1 style="color: red; text-align: center;">WELCOME TO <br> ZYGOTE DOT NET</h1>
-        <p style="text-align:center; filter: invert(100%);"><img src="images/giphy.gif"></p>
-        <p style="color: yellow; text-align: center;">the part of reality <br> where past and future <br> become present</p>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
         <!-- hitwebcounter Code START -->
         <a href="https://www.hitwebcounter.com" target="_blank">
-        <p style="text-align:center;"><img src="https://hitwebcounter.com/counter/counter.php?page=8189262&style=0014&nbdigits=5&type=ip&initCount=0" title="Free Counter" Alt="web counter"   border="0" /></a></p>  
-</html>
+        <img style="text-align: center;" src="https://hitwebcounter.com/counter/counter.php?page=8241837&style=0009&nbdigits=5&type=ip&initCount=0" title="Free Counter" Alt="web counter"   border="0" /></a>                                    
+        <p style="color: white;">acidica 2023</p> 
+ </html>
