--- a/home.html
+++ b/home.html
@@ -27,26 +27,35 @@
             .boarder {
                 border-style: solid;
                 background-color: red;
+                border-color: red;
                 width: 600px;
                 height: 1px;
             }
+            body {
+                background-color: black;
+                color: white;
+                text-align:center
+            }
         </style>
     </head>
-    <body style="background-color: black; text-align: center;">
-        <p class="news" style="color: white;"> <b>CURRENT NEWS:</b> acidica creates a new website? all we can pray is that visual updates come sooner than </p> 
+    <body>
+        <p class="news"> 
+            <b>CURRENT NEWS:</b> 
+            acidica more suicical than ever  !! ! !  ! (false) 
+        </p> 
         <br>
         <br>
         <br>
         <hr class="boarder">
         <h1 style="color: red; text-align: center; font-size: 50px;">WELCOME TO <br> ZYGOTE DOT NET</h1>
         <center>
-            <u><h3 class="links" style="text-align: center; ">
+            <h3 style="text-align: center; word-spacing: 30px;" class="links">
                 <a href="https://www.youtube.com/channel/UCK0U_ca0x7LgiRdF67XdpxQ" style="text-decoration: none; color: yellow;">zygoteweb</a>
-                br <a href="https://linktr.ee/acidica" style="text-decoration: none; color: yellow;">linktree</a>
-                br <a href="journal.html" style="text-decoration: none; color: yellow;">blog</a>
-                br <a href="" style="text-decoration: none; color: yellow;">about</a>
-            </h3></u> 
-        </center>    
+                <a href="https://linktr.ee/acidica" style="text-decoration: none; color: yellow;">linktree</a>
+                <a href="journal.html" style="text-decoration: none; color: yellow;">blog</a>
+                <a href="" style="text-decoration: none; color: yellow;">about</a>
+            </h3> 
+        </center>
         <p style="text-align:center; filter: invert(100);"><img src="images/homepage.gif"></p>
         <p style="color: yellow; text-align: center;">the part of reality <br> where past and future <br> become present.</p> 
         <br>
@@ -65,6 +74,6 @@
         <br>
         <!-- hitwebcounter Code START -->
         <a href="https://www.hitwebcounter.com" target="_blank">
-        <img style="text-align: center;" src="https://hitwebcounter.com/counter/counter.php?page=8241837&style=0009&nbdigits=5&type=ip&initCount=0" title="Free Counter" Alt="web counter"   border="0" /></a>                                    
-        <p style="color: white;">acidica 2023</p> 
+        <img src="https://hitwebcounter.com/counter/counter.php?page=8241837&style=0009&nbdigits=5&type=ip&initCount=0" title="Free Counter" Alt="web counter"   border="0" /></a>                                    
+        <p>acidica 2023</p> 
  </html>
