--- a/index.html
+++ b/index.html
@@ -2,8 +2,11 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="author" content="Edward Roane">
+        <meta name="description" content="a blog, art, and future forum site, basically just whatever speaks to me.">
+        <meta name="viewport content="width=device-width, initial-scale=1">
         <title>18+</title>
+        <link rel="icon" href="images/icon.png"
     </head>
     <body style="background-color: black; text-align: center;">
         <br>
