--- a/home.html
+++ b/home.html
@@ -2,8 +2,11 @@
 <html>
     <head> 
         <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="author" content="Edward Roane">
+        <meta name="description" content="the best homepage ever! !! ">
+        <meta name="viewport content="width=device-width, initial-scale=1">
         <title>Zygote Home</title>
+        <link rel="icon" href="images/icon.png">
         <style>
             .poler {
                 width: 128px;
