--- a/home.html
+++ b/home.html
@@ -6,7 +6,7 @@
         <meta name="description" content="the best homepage ever! !! ">
         <meta name="viewport content="width=device-width, initial-scale=1">
         <title>Zygote Home</title>
-        <link rel="icon" href="images/icon.png">
+        <link rel="icon" href="imaged/icon.png" type="image/x-icon"> 
         <style>
             .poler {
                 width: 128px;
