--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="description" content="a blog, art, and future forum site, basically just whatever speaks to me.">
         <meta name="viewport content="width=device-width, initial-scale=1">
         <title>18+</title>
-        <link rel="icon" href="images/icon.png"
+        <link rel="icon" href="imaged/icon.png" type="image/x-icon"> 
     </head>
     <body style="background-color: black; text-align: center;">
         <br>
