--- a/home.html
+++ b/home.html
@@ -6,40 +6,8 @@
         <meta name="description" content="the best homepage ever! !! ">
         <meta name="viewport content="width=device-width, initial-scale=1">
         <title>Zygote Home</title>
-        <link rel="icon" href="imaged/icon.png" type="image/x-icon"> 
-        <style>
-            .poler {
-                width: 128px;
-                height: 128px;
-            }
-            .news {
-                border-style: solid;
-                border-width: 2px;
-                border-color: red;
-                background-color: red;
-                padding: 5px;
-            }
-            .links {
-                border-style: solid;
-                border-width: 1px;
-                border-color: yellow;
-                width: 360px;
-                height: 23px;
-                padding: 5px;
-            }
-            .boarder {
-                border-style: solid;
-                background-color: red;
-                border-color: red;
-                width: 600px;
-                height: 1px;
-            }
-            body {
-                background-color: black;
-                color: white;
-                text-align:center
-            }
-        </style>
+        <link rel="icon" href="images/icon.png" type="image/x-icon">         
+        <link rel="stylesheet" href="main.css">
     </head>
     <body>
         <p class="news"> 
