--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
     <head>
         <meta charset="utf-8">
         <meta name="author" content="Edward Roane">
-        <meta name="description" content="a blog, art, and future forum site, basically just whatever speaks to me.">
+        <meta name="description" content="the best homepage ever! !! ">
         <meta name="viewport content="width=device-width, initial-scale=1">
-        <title>18+</title>
-        <link rel="icon" href="imaged/icon.png" type="image/x-icon"> 
+        <title>Zygote Home</title>
+        <link rel="icon" href="images/icon.png" type="image/x-icon">         
+        <link rel="stylesheet" href="main.css">
     </head>
     <body style="background-color: black; text-align: center;">
         <br>
