--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html> 
     <head> 
         <meta charset="utf-8">
         <meta name="author" content="Edward Roane">
@@ -21,9 +21,9 @@
                     <legend>Contact Information</legend>
                     <form action="mail.php" method="POST">
                         <p>
-                            <input type="text" name="name" id="name" placeholder="Your Name" required> <br><br>
-                            <input type="email" name="email" id="email" placeholder="Your Email" required> <br><br>
-                            <input type="text" name="subject" id="subject" placeholder="Email Subject" required> <br><br>
+                            <input type="text" name="name" placeholder="Your Name" required> <br><br>
+                            <input type="email" name="email" placeholder="Your Email" required> <br><br>
+                            <input type="text" name="subject" placeholder="Email Subject" required> <br><br>
                             <textarea name="message" id="message" cols="30" rows="10" placeholder="Your message"></textarea>
                             <br><br>
                             <button type="submit" value="Send">Send</button>
