--- a/blog.html
+++ b/blog.html
@@ -16,6 +16,7 @@
             <nav aria-label="primary-navigation">
                 <h4>all entries:</h4>
                 <section>
+                    <p>febuary 2 2023: <a href="blog/today sucks i hate today PART 2.html" style="text-decoration: none; color: red;">today sucks i hate today PART 2</a></p>
                     <p>febuary 2 2023: <a href="blog/today sucks i hate today.html" style="text-decoration: none; color: red;">today sucks i hate today</a></p>
                     <p>febuary 1 2023: <a href="blog/entry 2 cuz y not.html" style="text-decoration: none; color: red;">entry 2 cuz y not</a></p>
                     <p>febuary 1 2023: <a href="blog/first ever entry.html" style="text-decoration: none; color: red;">first ever entry</a></p>
