--- a/website/home.html
+++ b/website/home.html
@@ -59,7 +59,7 @@
                 <p style="color: yellow; text-align: center;">the part of reality where past and future become present.</p> 
             </nav>
             <img class="fire"  style="filter: invert(); transform: rotate(180deg);" src="images/fire.gif">
-        <header>
+        </header>
         <br><br><br><br><br><br><br><br><br>
         <a href="https://open.spotify.com/artist/627HXT10AvEWLSygfnhN89?si=z7lb-G2QRM6FN3js6ZW-2w" target="_blank">
             <img class="migim" src="images/migimad.jpg">
@@ -93,4 +93,5 @@
             
             <p>acidica 2023</p> 
         </footer>
+    </body>       
  </html>
