--- a/website/home.html
+++ b/website/home.html
@@ -15,7 +15,7 @@
                 <caption style="background-color: rgb(255, 0, 230); color: black; font-size: 30px;">
                     <b>CURRENT MEDIA </b>
                 </caption>
-                <td style="text-align: center; background-color: black;"><b> wtfreak zygote day❗❗❗</b></td>
+                <td style="text-align: center; background-color: black;"><b> wtfreak new release fuckFUCKFUCK❗❗❗</b></td>
             </tr>
         </table>
         <br>
@@ -30,7 +30,7 @@
                         <b>WTF IS ZYGOTE?</b>
                     </caption>
 
-                    <td>hi, im Acidica, but sometimes i go by the name Zygote. I'm a  Musician, Producer, Artist, Writer, etc. i've dedicated most of my life now to my art, and have a deep and burning passion for the stuff i create. i hope that coming to this website allows you to understand the thoughts behind my creations, and why i create the stuff that i do. as of now, this website isn't finished and is still in development, i made this website on 2/1/2023 (Febuary 1st 2023) after learning 30 minutes of HTML, and it really only took me a single day to "complete", i wanna add a lot of different shit, like forums, my blog, secret exclusive shit (secret stuff seperate from my <a href="https://patreon.com/TheAcidica?utm_medium=clipboard_copy&utm_source=copyLink&utm_campaign=creatorshare_creator&utm_content=join_link" target="_blank" style="text-decoration: none; color: yellow;">patreon</a>. as of 2/2/2023 (Febuary 2nd 2023) not many people know of this site other than a few of my close friends, and i mainly made this site for my 3rd album "zygotedotnet". anyway i dont have much to say anymore, hope you enjoy your stay !</td>
+                    <td>hi, im Acidica, but sometimes i go by the name Zygote. I'm a  Musician, Producer, Artist, Writer, etc. i've dedicated most of my life now to my art, and have a deep and burning passion for the stuff i create. i hope that coming to this website allows you to understand the thoughts behind my creations, and why i create the stuff that i do. as of now, this website isn't finished and is still in development, i made this website on 2/1/2023 (Febuary 1st 2023) after learning 30 minutes of HTML, and it really only took me a single day to "complete"</td>
                 </tr>
             </table>
             <br><br>
@@ -55,7 +55,9 @@
                     <a href="contact.html" style="text-decoration: none; color: yellow;">contact</a>
                 </h3> 
                 <h1>LATEST CONTENT:</h1>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/lBzHOz9YR2I" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/fCZSwXqcrOc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <h1>LATEST RELEASE:</h1>
+                <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/1XX0SPwWIDyDBiUtfKRA2s?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
                 <p style="color: yellow; text-align: center;">the part of reality where past and future become present.</p> 
             </nav>
             <img class="fire"  style="filter: invert(); transform: rotate(180deg);" src="images/fire.gif">
