--- a/website/home.html
+++ b/website/home.html
@@ -15,7 +15,7 @@
                 <caption style="background-color: rgb(255, 0, 230); color: black; font-size: 30px;">
                     <b>CURRENT MEDIA </b>
                 </caption>
-                <td style="text-align: center; background-color: black;"><b> wtfreak new release fuckFUCKFUCK❗❗❗</b></td>
+                <td style="text-align: center; background-color: black;"><b> ok the ep is almost out, be ready</b></td>
             </tr>
         </table>
         <br>
@@ -55,10 +55,9 @@
                     <a href="contact.html" style="text-decoration: none; color: yellow;">contact</a>
                 </h3> 
                 <h1>LATEST CONTENT:</h1>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/fCZSwXqcrOc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/AZ0Q1lac39Q" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                 <h1>LATEST RELEASE:</h1>
-                <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/1XX0SPwWIDyDBiUtfKRA2s?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
-                <p style="color: yellow; text-align: center;">the part of reality where past and future become present.</p> 
+                <iframe style="border-radius:12px" src="https://open.spotify.com/embed/album/4oxNPeYpexVkNvKmWRhBeU?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>                <p style="color: yellow; text-align: center;">the part of reality where past and future become present.</p> 
             </nav>
             <img class="fire"  style="filter: invert(); transform: rotate(180deg);" src="images/fire.gif">
         </header>
