--- a/website/home.html
+++ b/website/home.html
@@ -13,9 +13,9 @@
         <table class="news">
             <tr>
                 <caption style="background-color: rgb(255, 0, 230); color: black; font-size: 30px;">
-                    <b>CURRENT MEDIA </b>
+                    <b>BREAKING NEWS </b>
                 </caption>
-                <td style="text-align: center; background-color: black;"><b> ok the ep is almost out, be ready</b></td>
+                <td style="text-align: center; background-color: black;"><b> nothing to see here, just a.. rebrand?</b></td>
             </tr>
         </table>
         <br>
@@ -23,16 +23,6 @@
             <a href="https://www.google.com/search?tbs=simg:CAQSgAEafgsQsIynCBpiCmAIAxIowxnpBPME5A7uBP0O4Q76Dv4OqQ66LYYtlS3qLKQj6C2OLaUjuS27JBowuGR7BgjGfvg0bz8sN2b8r_1IiFr_1O9YWRjO-6-q4czx1UsaBPZo9FzbrQoYx31pf-IAQMCxCOrv4IGgoKCAgBEgRSP8pGDA&sxsrf=AJOqlzWT7xQQ_IW7Si7aO7Huvj6OmVjWEg:1675445931126&q=zygoteweb&tbm=isch&sa=X&ved=2ahUKEwjGrMK88vn8AhXJFlkFHdCiDQEQ2A4oAHoECAYQAg&biw=2087&bih=1043&dpr=0.9#imgrc=WT82ICybFLFWNM" target="_blank" >
                 <img src="images/banner.png">
             </a>
-            <br><br>
-            <table class="about">
-                <tr >
-                    <caption style="background-color: rgb(255, 0, 230); color: black; font-size: 30px;">
-                        <b>WTF IS ZYGOTE?</b>
-                    </caption>
-
-                    <td>hi, im Acidica, but sometimes i go by the name Zygote. I'm a  Musician, Producer, Artist, Writer, etc. i've dedicated most of my life now to my art, and have a deep and burning passion for the stuff i create. i hope that coming to this website allows you to understand the thoughts behind my creations, and why i create the stuff that i do. as of now, this website isn't finished and is still in development, i made this website on 2/1/2023 (Febuary 1st 2023) after learning 30 minutes of HTML, and it really only took me a single day to "complete"</td>
-                </tr>
-            </table>
             <br><br>
             <table class="allinks" >
                 <caption style="background-color: rgb(68, 96, 255); color: black; font-size: 30px;">
@@ -53,11 +43,13 @@
                 <h3 class="links" style="text-align: center; word-spacing: 60px;">
                     <a href="art.html" style="text-decoration: none; color: yellow;">art</a>                           
                     <a href="contact.html" style="text-decoration: none; color: yellow;">contact</a>
+                    <a href="blog.html" style="text-decoration: none; color: yellow;">blog</a>
                 </h3> 
                 <h1>LATEST CONTENT:</h1>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/AZ0Q1lac39Q" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <iframe width="639" height="480" src="https://www.youtube.com/embed/gAHG1oKn-AM" title="Acidica - zygotedotnet (full album)" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                 <h1>LATEST RELEASE:</h1>
-                <iframe style="border-radius:12px" src="https://open.spotify.com/embed/album/4oxNPeYpexVkNvKmWRhBeU?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>                <p style="color: yellow; text-align: center;">the part of reality where past and future become present.</p> 
+                <iframe style="border: 0; width: 100%; height: 120px;" src="https://bandcamp.com/EmbeddedPlayer/album=3606677332/size=large/bgcol=333333/linkcol=0f91ff/tracklist=false/artwork=small/transparent=true/" seamless><a href="https://theacidica.bandcamp.com/album/zygotedotnet">zygotedotnet by Acidica</a></iframe>
+                <p style="color: yellow; text-align: center;">the part of reality where past and future become present.</p> 
             </nav>
             <img class="fire"  style="filter: invert(); transform: rotate(180deg);" src="images/fire.gif">
         </header>
@@ -68,9 +60,12 @@
         </h1>
         <p>✿ ლ（´∀`ლ）ಠ益ಠ ↁ_ↁ o(≧o≦)o (┛❍ᴥ❍ )┛彡┻━┻ (◡︿◡✿) ┬──┬ ノ( ゜-゜ノ) ┬─┬ノ( º _ ºノ) (ʘ∇ʘ)ク 彡 ┻━┻ ✿</p>                
         <br><br>
-        <iframe style="border-radius:12px" src="https://open.spotify.com/embed/album/3BWaOPBWrXDAxgKRDTQWLK?utm_source=generator&theme=0" width="50%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
-        <br><br><br><br>
-        <iframe style="border-radius:12px" src="https://open.spotify.com/embed/album/0CURYcVKV2Ud4bToz8H8ZL?utm_source=generator&theme=0" width="50%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+        <nav aria-label="primary-navigation" class="nav_boarder">
+                <iframe style="border: 0; width: 100%; height: 120px;" src="https://bandcamp.com/EmbeddedPlayer/album=1753368225/size=large/bgcol=333333/linkcol=0f91ff/tracklist=false/artwork=small/transparent=true/" seamless><a href="https://theacidica.bandcamp.com/album/good-morning-sunshine">*good morning sunshine by Acidica</a></iframe>
+            <br><br><br><br>
+                <iframe style="border: 0; width: 100%; height: 120px;" src="https://bandcamp.com/EmbeddedPlayer/album=1393021280/size=large/bgcol=333333/linkcol=0f91ff/tracklist=false/artwork=small/transparent=true/" seamless><a href="https://theacidica.bandcamp.com/album/supar-katz">Supar Katz by Acidica</a></iframe>
+            <br><br>
+        </nav>\
         <br><br>
         <p>✿ ლ（´∀`ლ）ಠ益ಠ ↁ_ↁ o(≧o≦)o (┛❍ᴥ❍ )┛彡┻━┻ (◡︿◡✿) ┬──┬ ノ( ゜-゜ノ) ┬─┬ノ( º _ ºノ) (ʘ∇ʘ)ク 彡 ┻━┻ ✿</p>
         <h1 class="releases" style="text-align: center; word-spacing: 10px;"> 
@@ -92,6 +87,17 @@
             <h3>
                 <p>acidica 2023</p> 
             </h3>
+            <br><br>
+            <table class="about">
+                <tr >
+                    <caption style="background-color: rgb(255, 0, 230); color: black; font-size: 30px;">
+                        <b>WTF IS ZYGOTE?</b>
+                    </caption>
+
+                    <td>hi, im Acidica, but sometimes i go by the name Zygote. I'm a  Musician, Producer, Artist, Writer, etc. i've dedicated most of my life now to my art, and have a deep and burning passion for the stuff i create. i hope that coming to this website allows you to understand the thoughts behind my creations, and why i create the stuff that i do. as of now, this website isn't finished and is still in development, i made this website on 2/1/2023 (Febuary 1st 2023) after learning 30 minutes of HTML, and it really only took me a single day to "complete"</td>
+                </tr>
+            </table>
+            <br><br>
         </footer>
     </body>       
  </html>
