--- a/website/blog.html
+++ b/website/blog.html
@@ -15,16 +15,20 @@
                 <br>
                 <tr >
                     <caption style="background-color: red; color: black; font-size: 30px;">
-                        <b>THE BLOG</b>
+                        <b>BLOG</b>
                     </caption>
     
-                    <td>just my thoughts, random images, and whatever else i feel like putting here honestly, this is kind of where the 18+ warning comes in lol so be weary.</td>
+                    <td>just my thoughts, random images, and whatever else i feel like putting here honestly, 18+ warning.</td>
                 </tr>
             </table>
             <nav aria-label="primary-navigation">
-                <h2 style="text-align: left; position:relative; left:80px;">all entries:</h2>
+                <h2 style="text-align: left; position:relative; left:80px;">all entries are currently nil </h2>
                 <section style="text-align: left; position:relative; left:80px;">
-                    <p>febuary 28 2023: <a href="blog/blg11.html" style="text-decoration: none; color: red;">birthday</a></p>
+
+
+                    <!--OLD BLOG ENTRIES -->
+
+                    <!-- <p>febuary 28 2023: <a href="blog/blg11.html" style="text-decoration: none; color: red;">birthday</a></p>
                     <p>febuary 16 2023: <a href="blog/blg10.html" style="text-decoration: none; color: red;">THE MOUSE</a></p>
                     <p>febuary 10 2023: <a href="blog/blg9.html" style="text-decoration: none; color: red;">wrath pt 2</a></p>
                     <p>febuary 10 2023: <a href="blog/blg8.html" style="text-decoration: none; color: red;">wrath</a></p>
@@ -35,6 +39,7 @@
                     <p>febuary 2 2023: <a href="blog/blg3.html" style="text-decoration: none; color: red;">today sucks i hate today</a></p>
                     <p>febuary 1 2023: <a href="blog/blg2.html" style="text-decoration: none; color: red;">entry 2 cuz y not</a></p>
                     <p>febuary 1 2023: <a href="blog/blg1.html" style="text-decoration: none; color: red;">first ever entry</a></p>
+                    -->
                 </section>
                 <center>
                     <h3 style="text-align: center; word-spacing: 30px;" class="back">
