--- a/website/blog.html
+++ b/website/blog.html
@@ -22,7 +22,7 @@
                 </tr>
             </table>
             <nav aria-label="primary-navigation">
-                <h2 style="text-align: left; position:relative; left:80px;">all entries are currently nil </h2>
+                <h2 style="text-align: left; position:relative; left:80px;">all entries:</h2>
                 <section style="text-align: left; position:relative; left:80px;">
 
                     <p>10/1/2024: <a href="blog/blog01.html" style="text-decoration: none; color: red;">0938i3rgh90202</a></p>
